ajustes backend
seed, e migration
